<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.xlongwei</groupId>
    <artifactId>light-start</artifactId>
    <packaging>jar</packaging>
    <version>0.1</version>
    <name>light-start</name>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.light-4j>1.6.47</version.light-4j>
        <version.jackson>2.15.3</version.jackson>
        <version.slf4j>2.0.7</version.slf4j>
        <version.jose4j>0.9.3</version.jose4j>
        <version.encoder>1.2.1</version.encoder>
        <version.logback>1.3.14</version.logback>
        <version.junit>4.12</version.junit>
        <version.undertow>2.2.28.Final</version.undertow>
        <nexus.server>http://nexus.com:8080</nexus.server>
        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
    </properties>
 
    <dependencies>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>config</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>utility</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>security</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>server</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>exception</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>traceability</artifactId>
            <version>${version.light-4j}</version>
        </dependency>
        <dependency>
            <groupId>com.networknt</groupId>
            <artifactId>correlation</artifactId>
            <version>${version.light-4j}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${version.jackson}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${version.logback}</version>
        </dependency>
        <dependency>
            <groupId>io.undertow</groupId>
            <artifactId>undertow-core</artifactId>
            <version>${version.undertow}</version>
        </dependency>
		<!-- generators -->
		<dependency>
		    <groupId>com.networknt</groupId>
		    <artifactId>codegen-fwk</artifactId>
		    <version>${version.light-4j}</version>
		</dependency>
		<dependency>
		    <groupId>com.networknt</groupId>
		    <artifactId>light-rest-4j-generator</artifactId>
		    <version>${version.light-4j}</version>
		</dependency>
		<dependency>
		    <groupId>com.networknt</groupId>
		    <artifactId>light-hybrid-4j-generator</artifactId>
		    <version>${version.light-4j}</version>
		</dependency>
		<dependency>
		    <groupId>com.networknt</groupId>
		    <artifactId>light-graphql-4j-generator</artifactId>
		    <version>${version.light-4j}</version>
		</dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>1.3</version>
    </dependency>
      
        <!-- Test Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
	<profiles>
		<profile>
			<id>cli-web</id>
			<dependencies>
				<dependency>
					<groupId>com.networknt</groupId>
					<artifactId>codegen-cli</artifactId>
					<version>${version.light-4j}</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>com.networknt</groupId>
					<artifactId>codegen-web</artifactId>
					<version>${version.light-4j}</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.networknt.server.Server</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-jar</argument>
                        <argument>target/${project.build.finalName}.jar</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
